# Zork-Taylor

./: CMakeLists.txt  Collectible.h  FinalRoom.h  Game.cpp  Game.h  Globals.cpp  Globals.h  IntroRoom.cpp  IntroRoom.h  InvalidMoveException.h  Item.cpp  Item.h  JSONclass.cpp  JSONclass.h  Player.h  Room.cpp  Room.h  Room1.cpp  Room1.h  Room2.h  Room3.h  RoomManager.cpp  RoomManager.h  Score.h  TaylorManager.cpp  TaylorManager.h  TourRoom.cpp  TourRoom.h  Trackable.h  TrackableScore.h  ZorkMain.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  rooms.json
